--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif,Arial; }
+.basic-container {
+    padding: 30px;
+}
+
+mat-button-toggle.mat-button-toggle-checked {
+    background:#69F0AE;
+    color: black;
+    outline: none;
+}
+
