--- a/Frontend/src/app/profile/profile.component.html
+++ b/Frontend/src/app/profile/profile.component.html
@@ -1,7 +1,8 @@
 <div>
+  <h1>Start Searching for Companies by ID, Name of filter them by their Sector</h1>
   <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" (focus)="form_click($event)"  placeholder="Ex. Mia">
+    <mat-label>Search For Companies</mat-label>
+    <input matInput (keyup)="applyFilter($event)" (focus)="form_click($event)"  placeholder="Ex. Apple">
   </mat-form-field>
 </div>
 
