--- a/Frontend/src/app/sector/sector.component.css
+++ b/Frontend/src/app/sector/sector.component.css
@@ -23,6 +23,12 @@
   .active{
     background-color:#BB86FC;
   }
+  table {
+    width: 100%;
+  }
+  .topMargin{
+    margin-top: 10px;
+  }
   /* .mat-card{
     display:flex;
     flex-direction: column;
