--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,9 +3,12 @@
     <button mat-icon-button>
       <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
     </button>
-    <h1>{{title}}</h1>
+    <h1>{{title}} <mat-icon>bubble_chart</mat-icon></h1>
     <span class="menu-spacer"></span>
     <div>
+      <div *ngIf="isLoggedIn">
+        <button mat-button [routerLink]="'/login'"> Logout </button>
+      </div>
       <button mat-button [routerLink]="'/about'"> About Us </button>
       <button mat-button [routerLink]="'/accounts'"> GitHub </button>      
     </div>
@@ -15,16 +18,16 @@
   <mat-sidenav #sidenav>
     <mat-nav-list>
       <a mat-list-item [routerLink]="'/home'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>home</mat-icon>  Home</a>
-      <a mat-list-item [routerLink]="'/profile'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>assignment</mat-icon>  Profile</a>
-      <a mat-list-item [routerLink]="'/sector'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>supervisor_account</mat-icon>  Sector</a>
+      <a mat-list-item [routerLink]="'/profile'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>assignment</mat-icon>  Stock Profile</a>
+      <a mat-list-item [routerLink]="'/sector'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>supervisor_account</mat-icon>  Sector Profile</a>
       <a mat-list-item [routerLink]="'/analytics'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>pie_chart</mat-icon>  Analytics</a> 
-      <a mat-list-item [routerLink]="'/trends'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>show_chart</mat-icon>  Trends</a>     
+      <a mat-list-item [routerLink]="'/trends'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>shopping_cart</mat-icon>  Buckets</a>     
       <a mat-list-item (click)="sidenav.toggle()"><mat-icon>exit_to_app</mat-icon>  Close</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div style="height: 88vh;" class="basic-container">      
-      <router-outlet></router-outlet>
+    <div style="height: 88vh;" class="basic-container">        
+        <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
