--- a/Frontend/src/app/sector/sector.component.html
+++ b/Frontend/src/app/sector/sector.component.html
@@ -5,16 +5,27 @@
           <mat-card-title>Shiba Inu</mat-card-title>
           <mat-card-subtitle>Dog Breed</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image class="main-image img-responsive" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <div class="main-image img-responsive" *ngIf="show_all; else elseBlock1">
+          Showing this
+          <div style="display: block">
+            <canvas baseChart
+                    [data]="pieChart.data"
+                    [labels]="pieChart.labels"
+                    [chartType]="pieChart.type"
+                    [options]="pieChart.options"
+                    [legend]="pieChart.legend">
+            </canvas>
+          </div>
+        </div>
+        <ng-template #elseBlock1><mat-progress-bar mode="indeterminate"></mat-progress-bar></ng-template>
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            In this section we present the description statistics of all the major sectors avaiable in
+            the market.
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button (click)="onBClick($event)"[ngClass]="{'active':isButton}">LIKE</button>
+          <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
         </mat-card-actions>
       </mat-card>
@@ -26,27 +37,14 @@
         </mat-card-header>
         <mat-card-content flex>
             <mat-tab-group mat-stretch-tabs backgroundColor="accent">
-                <mat-tab label="Sector 1"> 
-                  <div class="main-image img-responsive">
-                    <div style="display: block">
-                      <canvas baseChart
-                              [datasets]="mybarchart.data.slice(i,i+1)"
-                              [labels]="mybarchart.label"
-                              [options]="mybarchart.options"
-                              [legend]="mybarchart.legend"
-                              [chartType]="'line'">
-                      </canvas>
-                    </div>
-                  </div>
+                <mat-tab *ngFor="let sec of sectorArray" [label]="sec.id">Content {{sec.id}}                  
                 </mat-tab>
-                <mat-tab label="Sector 2"> Content 2 </mat-tab>
-                <mat-tab label="Sector 3"> Content 3 </mat-tab>
             </mat-tab-group>
             <div class="d-flex justify-content-end">
                 <mat-card-actions>
                 <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style" class="mr-auto">
-                    <mat-button-toggle value="bold" [checked]="true" (click)="i=0">Price</mat-button-toggle>
-                    <mat-button-toggle value="italic" (click)="i+1">Quantity</mat-button-toggle>
+                    <mat-button-toggle value="bold" [checked]="true">Price</mat-button-toggle>
+                    <mat-button-toggle value="italic">Quantity</mat-button-toggle>
                     <mat-button-toggle value="underline">Volume</mat-button-toggle>
                 </mat-button-toggle-group>
                 </mat-card-actions>
@@ -54,72 +52,65 @@
         </mat-card-content>
     </mat-card>
   </div>
-  <div class="row d-flex justify-content-between">
-    <mat-card class="example-card">
+
+  <!--Individual Sectors-->
+  <div *ngFor="let item of sectorArray;index as i">
+    <mat-list>
+      <mat-list-item>{{item.id | uppercase}}</mat-list-item>
+      <mat-divider></mat-divider>      
+    </mat-list>
+    <div class="row">
+      <mat-card class="long-card">
         <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Pie Chart</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Best in the Sector</mat-card-title>
+          <mat-card-subtitle>Top 5 Companies</mat-card-subtitle>
         </mat-card-header>
-        <!-- <img mat-card-image class="main-image img-responsive" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
         <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
+          <mat-table [dataSource]="item.datasource" class="topMargin">
+            <!-- ID Column -->
+            <ng-container matColumnDef="ID">
+              <mat-header-cell *matHeaderCellDef> ID. </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.ID}} </mat-cell>
+            </ng-container>
+          
+            <!-- Company Column -->
+            <ng-container matColumnDef="Company">
+              <mat-header-cell *matHeaderCellDef> Company Name </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.Company}} </mat-cell>
+            </ng-container>
+          
+            <!-- Year of Inception Column -->
+            <ng-container matColumnDef="YearOfInception">
+              <mat-header-cell *matHeaderCellDef> Year of Inception </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.YearOfInception}} </mat-cell>
+            </ng-container>          
+            <mat-header-row *matHeaderRowDef="displayedColumns" ></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
         </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
       </mat-card>
-      <mat-card class="example-card">
+      <mat-card class="example-card ml-3">
         <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Details of chart</mat-card-title>
-          <mat-card-subtitle>Subtitle of chart</mat-card-subtitle>
+          <mat-card-title>Facts About the Sector</mat-card-title>
+          <mat-card-subtitle>Some Spice</mat-card-subtitle>
         </mat-card-header>
-        <!-- <img mat-card-image class="main-image img-responsive" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-        <div class="main-image img-responsive">
-          <div style="display: block">
-            <canvas baseChart
-                    [datasets]="mybarchart.data"
-                    [labels]="mybarchart.label"
-                    [options]="mybarchart.options"
-                    [legend]="mybarchart.legend"
-                    [chartType]="mybarchart.type">
-            </canvas>
-          </div>
-        </div>
         <mat-card-content>
-          Content about the chart
+          <mat-table [dataSource]="item.avgStat" class="topMargin">
+            <!-- ID Column -->
+            <ng-container matColumnDef="parameter">
+              <mat-header-cell *matHeaderCellDef> Parameter </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.parameter}} </mat-cell>
+            </ng-container>
+          
+            <!-- Company Column -->
+            <ng-container matColumnDef="value">
+              <mat-header-cell *matHeaderCellDef> Value </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.value}} </mat-cell>
+            </ng-container>                 
+            <mat-header-row *matHeaderRowDef="displayedColumns2" ></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns2;"></mat-row>
+          </mat-table>
         </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
       </mat-card>
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <div style="display: block">
-          <canvas baseChart
-                      [data]="doughnutchart.data"
-                      [labels]="doughnutchart.label"
-                      [chartType]="doughnutchart.type"></canvas>
-        </div>
-        <mat-card-content>
-          <p>
-            Pie/Doughnut Chart Description
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
+    </div>
   </div>
