--- a/Frontend/src/app/stockprofile/stockprofile.component.css
+++ b/Frontend/src/app/stockprofile/stockprofile.component.css
@@ -1,10 +1,44 @@
 .example-card {
-    max-width: 400px;
-    padding-right: 10px;
-    padding-top:10px;
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+  width:400px;
+  margin-top: 4px;
+  margin-right: 4px;
+}
+
+.main-image{
+  /* padding: 0 10px; */
+  box-sizing: border-box;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba2.jpg');
+  background-size: cover;
+}
+.long-card{
+  min-width: 1050px;
+  /* max-width: 1000px; */
+  /* padding: 30px; */
+  margin-top: 4px;
+  margin-right: 4px;
+}
+.active{
+  background-color:#BB86FC;
+}
+table {
+  width: 100%;
+}
+.topMargin{
+  margin-top: 10px;
+}
+/* .mat-card{
+  display:flex;
+  flex-direction: column;
+}
+
+.mat-card-header {
+  flex-shrink: 0;
+}
+
+.mat-card-content{
+  flex-grow: 1;
+  overflow: auto;
+}  */
