--- a/Frontend/src/app/stockprofile/stockprofile.component.html
+++ b/Frontend/src/app/stockprofile/stockprofile.component.html
@@ -1,39 +1,38 @@
-<mat-card class="example-card">
+  <div class="row">      
+  <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{parentData.name}}</mat-card-title>
+      <mat-card-title>{{parentData.name | uppercase}}</mat-card-title>
       <mat-card-subtitle>{{parentData.id}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    </mat-card-header>    
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        {{parentData.name}} , alias {{parentData.id}} on stock market registerd for IPO in {{foundYear}} . Since then it has sold {{units}} of stocks
+        The best year for the company was {{bestYear}} where it sold {{bestUnits}}.The value of share peaked at {{maxShareValue}} on {{maxShareDate}}.
+        On an avg this company has been selling {{avgVolume}} over the recorded year;
       </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-</mat-card>
-
-<mat-card class="example-card">
+    </mat-card-content>    
+  </mat-card>
+<mat-card class="long-card ml-3">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{parentData.name}}</mat-card-title>
-      <mat-card-subtitle>{{parentData.id}}</mat-card-subtitle>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Graph1</mat-card-title>
+        <mat-card-subtitle>Graph Description</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
+    <mat-card-content flex>
+        <mat-tab-group mat-stretch-tabs backgroundColor="accent">
+            <mat-tab *ngFor="let sec of stockArray" [label]="sec">Content {{sec}}                  
+            </mat-tab>
+        </mat-tab-group>
+        <div class="d-flex justify-content-end">
+            <mat-card-actions>
+            <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style" class="mr-auto">
+                <mat-button-toggle value="bold" [checked]="true">Price</mat-button-toggle>
+                <mat-button-toggle value="italic">Quantity</mat-button-toggle>
+                <mat-button-toggle value="underline">Volume</mat-button-toggle>
+            </mat-button-toggle-group>
+            </mat-card-actions>
+        </div>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
 </mat-card>
+</div>
