--- a/Frontend/src/app/analytics/analytics.component.html
+++ b/Frontend/src/app/analytics/analytics.component.html
@@ -30,5 +30,26 @@
     </mat-select>
  </mat-form-field>
  </div> 
- <button *ngIf="monthShow" mat-raised-button class="btn-block" color="accent" (click)="submitDate()">See The Results</button> 
+ <button mat-raised-button class="btn-block" color="accent" (click)="submitDate()">See The Results</button> 
   <p>You selected:{{sectorSelected}} {{yearSelected}} {{monthSelected}} {{daySelected}}</p>
+  <mat-table [dataSource]="dataSource">
+    <!-- ID Column -->
+    <ng-container matColumnDef="ID">
+      <mat-header-cell *matHeaderCellDef> ID. </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.ID}} </mat-cell>
+    </ng-container>
+  
+    <!-- Company Column -->
+    <ng-container matColumnDef="Company">
+      <mat-header-cell *matHeaderCellDef> Company Name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.Company}} </mat-cell>
+    </ng-container>
+  
+    <!-- Year of Inception Column -->
+    <ng-container matColumnDef="YearOfInception">
+      <mat-header-cell *matHeaderCellDef> Year of Inception </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.YearOfInception}} </mat-cell>
+    </ng-container>          
+    <mat-header-row *matHeaderRowDef="displayedColumns" ></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
