--- a/Frontend/src/app/profile/profile.component.html
+++ b/Frontend/src/app/profile/profile.component.html
@@ -16,9 +16,9 @@
       </ng-container>
 
       <!-- Progress Column -->
-      <ng-container matColumnDef="progress">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+      <ng-container matColumnDef="Sector">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
+        <td mat-cell *matCellDef="let row"> {{row.Sector}} </td>
       </ng-container>
 
       <!-- Name Column -->
@@ -27,14 +27,10 @@
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
 
-      <!-- Color Column -->
-      <ng-container matColumnDef="color">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-        <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
-      </ng-container>
+      
       <!-- Button Columns-->
-      <ng-container matColumnDef="button">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Button </th>
+      <ng-container matColumnDef="Option">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Option </th>
         <td mat-cell *matCellDef="let row"> <button mat-raised-button color="accent" (click)="onViewClick(row)">View</button> </td>
       </ng-container>
 
