--- a/Frontend/src/app/buckets/buckets.component.css
+++ b/Frontend/src/app/buckets/buckets.component.css
@@ -1,4 +1,16 @@
 .mat-form-field + .mat-form-field {
     margin-left: 8px;
   }
+  .example-form {
+    margin-top: 20px;
+  }
+  
+  .example-full-width {
+    width: 72%;
+    /* margin-right: 3%; */
+  }
+  .end-btn{
+    width:15% ;
+    margin-right: 8px;
+  }
   
