--- a/Frontend/src/app/trade/trade.component.html
+++ b/Frontend/src/app/trade/trade.component.html
@@ -35,8 +35,45 @@
         <mat-label>Qty</mat-label>
         <input type="number" min="0" matInput [(ngModel)]="selectedQty" name="stock-qty">
       </mat-form-field>
-      <button mat-raised-button class="btn btn-dark" (click)="add_to_list()">Add</button>
+      <button mat-raised-button class="btn btn-dark" (click)="add_to_list()"> <mat-icon>add</mat-icon>Add</button>
       <button mat-raised-button *ngIf="newShareList.length>0" class="btn-success btn-block" (click)="checkout()"> Checkout!</button>
-
     </form>
   </div>
+<br>
+<div>
+    <!-- Sell -->
+    <mat-table [dataSource]="dataSourceSell" class="mat-elevation-z8">
+        <!-- ID Column -->
+        <ng-container matColumnDef="ID">
+          <mat-header-cell *matHeaderCellDef> ID. </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+        </ng-container>
+      
+        <!-- Company Column -->
+        <ng-container matColumnDef="Company">
+          <mat-header-cell *matHeaderCellDef> Company Name </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.cname}} </mat-cell>
+        </ng-container>
+      
+        <!-- Year of Inception Column -->
+        <ng-container matColumnDef="Quantity">
+          <mat-header-cell *matHeaderCellDef> Units of Stock </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.qty}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Option">
+            <mat-header-cell *matHeaderCellDef> Options </mat-header-cell>
+            <mat-cell *matCellDef="let element;let i=index"> <button mat-raised-button class="btn-danger" (click)="SellStock(i)">Sell This {{i}}</button> </mat-cell>
+          </ng-container>          
+        <mat-header-row *matHeaderRowDef="displayedColumns" ></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+</div>
+<div *ngIf="showStockSell">
+    <br>
+    Select the quantity of shares to sell:<span style="display:inline-block; width: 10px;"></span>{{stockSell}}    
+    <mat-form-field appearance="legacy">
+        <mat-label>Units to be Sold</mat-label>
+        <input type="number" matInput placeholder="Number of Shares to Sell" [(ngModel)]="qtySell" style="margin-left: 10px;">
+    </mat-form-field>
+    <button mat-raised-button class="btn-warning" style="margin-left: 10px;">Chekout!</button>
+</div>
