--- a/Frontend/src/app/trade/trade.component.html
+++ b/Frontend/src/app/trade/trade.component.html
@@ -1,5 +1,6 @@
 <button class="btn btn-primary">Buy</button>
 <button class="btn btn-primary" style="margin-left: 8px;">Sell</button>
+<br><h2> Buy Stocks</h2>
 <div>
     <mat-table #table [dataSource]="datS">
         <!-- ID Column -->
@@ -40,6 +41,7 @@
     </form>
   </div>
 <br>
+<h2> Sell Stocks</h2>
 <div>
     <!-- Sell -->
     <mat-table [dataSource]="dataSourceSell" class="mat-elevation-z8">
@@ -62,7 +64,7 @@
         </ng-container>
         <ng-container matColumnDef="Option">
             <mat-header-cell *matHeaderCellDef> Options </mat-header-cell>
-            <mat-cell *matCellDef="let element;let i=index"> <button mat-raised-button class="btn-danger" (click)="SellStock(i)">Sell This {{i}}</button> </mat-cell>
+            <mat-cell *matCellDef="let element;let i=index"> <button mat-raised-button class="btn-danger" (click)="SellStock(i)">Sell This</button> </mat-cell>
           </ng-container>          
         <mat-header-row *matHeaderRowDef="displayedColumns" ></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
