--- a/Frontend/src/app/sector/sector.component.css
+++ b/Frontend/src/app/sector/sector.component.css
@@ -42,3 +42,8 @@
     flex-grow: 1;
     overflow: auto;
   }  */
+  .flex-container {
+    display: flex;
+    min-height: 200px;
+   align-items: center;
+  }
