--- a/Frontend/src/app/profile/profile.component.html
+++ b/Frontend/src/app/profile/profile.component.html
@@ -1,46 +1,45 @@
 <div>
   <h1>Start Searching for Companies by ID, Name of filter them by their Sector</h1>
-  <mat-form-field>
-    <mat-label>Search For Companies</mat-label>
-    <input matInput (keyup)="applyFilter($event)" (focus)="form_click($event)"  placeholder="Ex. Apple">
-  </mat-form-field>
 </div>
+
+<mat-form-field>
+  <mat-label>Start Searching For Company</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. aapl" (focusin)="form_click($event)">
+</mat-form-field>
 
 <div class="mat-elevation-z8" [hidden]="hidetable">
-    <table mat-table [dataSource]="dataSource" matSort>
+  <table mat-table [dataSource]="dataSource" matSort>
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+    </ng-container>
 
-      <!-- ID Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-      </ng-container>
+    <!-- Progress Column -->
+    <ng-container matColumnDef="sector">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
+      <td mat-cell *matCellDef="let row"> {{row.sector}} </td>
+    </ng-container>
 
-      <!-- Progress Column -->
-      <ng-container matColumnDef="Sector">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
-        <td mat-cell *matCellDef="let row"> {{row.Sector}} </td>
-      </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="option">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Option </th>
+      <td mat-cell *matCellDef="let row"> <button mat-raised-button class="btn-dark" (click)="onViewClick(row)">View</button> </td>
+    </ng-container>
 
-      
-      <!-- Button Columns-->
-      <ng-container matColumnDef="Option">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Option </th>
-        <td mat-cell *matCellDef="let row"> <button mat-raised-button color="accent" (click)="onViewClick(row)">View</button> </td>
-      </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-      </tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
-<app-stockprofile *ngIf="enabled" [parentData]="id"></app-stockprofile>
 
+<app-stockprofile *ngIf="enabled" [parentData]="id"></app-stockprofile>
 
