--- a/Frontend/src/app/stockprofile/stockprofile.component.html
+++ b/Frontend/src/app/stockprofile/stockprofile.component.html
@@ -36,3 +36,12 @@
     </mat-card-content>
 </mat-card>
 </div>
+<div id="Cgp5" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+<div id="CgpM" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+<div id="CgpY" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+<div id="CgpA" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+
+<div id="Cgv5" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+<div id="CgvM" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+<div id="CgvY" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
+<div id="CgvA" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div><br>
