--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div>      
       <button *ngIf="auth.isLoggedIn" mat-button (click)="onClick()"> Logout </button>
       <button mat-button [routerLink]="'/about'"> About Us </button>
-      <button mat-button [routerLink]="'/accounts'"> GitHub </button>      
+      <a mat-button href="https://github.com/rohitkumarsingh29/Strap"> GitHub </a>      
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
