--- a/Frontend/src/app/aboutus/aboutus.component.html
+++ b/Frontend/src/app/aboutus/aboutus.component.html
@@ -1,2 +1,9 @@
-<p>About Us OWrks!</p>
-<div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
+<div class="jumbotron bg-dark">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple website to compare two stocks and see its history and hence make intelligent decisions in purchasing the stock</p>
+    <hr class="my-4">
+    <p>This was made by Rohit Kumar Singh (2016ME10080) and Saumya Gupta(2016ME10080)</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="https://github.com/rohitkumarsingh29/Strap" role="button">Learn more</a>
+    </p>
+  </div>
