--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <mat-card class="example-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Bruce Wayne</mat-card-title>
+          <mat-card-title>{{LogName}}</mat-card-title>
           <mat-card-subtitle>Superhero</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="../../assets/image/profile_pic.jpg" alt="Photo of a Shiba Inu">
