--- a/Frontend/src/app/sector/sector.component.html
+++ b/Frontend/src/app/sector/sector.component.html
@@ -1,5 +1,5 @@
   <div class="row">      
-      <mat-card style="width: 100%;"> 
+      <mat-card style="width:100%;">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>Shiba Inu</mat-card-title>
@@ -24,7 +24,37 @@
             the market.
           </p>
         </mat-card-content>        
-      </mat-card>    
+      </mat-card>
+    <mat-card style="width: 100%;">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Graph1</mat-card-title>
+            <mat-card-subtitle>Graph Description</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content flex>
+            <mat-tab-group mat-stretch-tabs backgroundColor="accent">
+              <ng-container *ngFor="let sec of sectorArray">
+                <mat-tab  [label]="sec.id">
+                  <div class="main-image img-responsive">
+                    <div style="display: block">
+                      
+                      <button class="btn btn-block btn-dark" [routerLink]="['/linegraph', sec.id]">DISPLAY GRAPH</button>
+                    </div>
+                  </div>                
+                </mat-tab>
+                </ng-container>
+            </mat-tab-group>
+            <div class="d-flex justify-content-end">
+                <mat-card-actions>
+                <!-- <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style" class="mr-auto">
+                    <mat-button-toggle value="bold" [checked]="true">Price</mat-button-toggle>
+                    <mat-button-toggle value="italic">Quantity</mat-button-toggle>
+                    <mat-button-toggle value="underline">Volume</mat-button-toggle>
+                </mat-button-toggle-group> -->
+                </mat-card-actions>
+            </div>
+        </mat-card-content>
+    </mat-card>
   </div>
 
   <!--Individual Sectors-->
