--- a/Frontend/src/app/trade/trade.component.html
+++ b/Frontend/src/app/trade/trade.component.html
@@ -75,7 +75,7 @@
     Select the quantity of shares to sell:<span style="display:inline-block; width: 10px;"></span>{{stockSell}}    
     <mat-form-field appearance="legacy">
         <mat-label>Units to be Sold</mat-label>
-        <input type="number" matInput placeholder="Number of Shares to Sell" [(ngModel)]="qtySell" style="margin-left: 10px;">
+        <input type="number" matInput disabled placeholder="Number of Shares to Sell" [(ngModel)]="qtySell" style="margin-left: 10px;">
     </mat-form-field>
     <button mat-raised-button class="btn-warning" style="margin-left: 10px;" (click)="checkoutSell()">Chekout!</button>
 </div>
