--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -19,7 +19,7 @@
       <a mat-list-item [routerLink]="'/profile'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>assignment</mat-icon>  Stock Profile</a>
       <a mat-list-item [routerLink]="'/sector'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>supervisor_account</mat-icon>  Sector Profile</a>
       <a mat-list-item [routerLink]="'/analytics'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>pie_chart</mat-icon>  Analytics</a> 
-      <a mat-list-item [routerLink]="'/trends'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>shopping_cart</mat-icon>  Buckets</a>     
+      <!-- <a mat-list-item [routerLink]="'/trends'" (click)="sidenav.toggle()" [routerLinkActive]="['is-active']"> <mat-icon>shopping_cart</mat-icon>  Buckets</a>      -->
       <a mat-list-item (click)="sidenav.toggle()"><mat-icon>exit_to_app</mat-icon>  Close</a>
     </mat-nav-list>
   </mat-sidenav>
