--- a/Frontend/src/app/trade/trade.component.html
+++ b/Frontend/src/app/trade/trade.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary">Buy</button>
+<button class="btn btn-primary" [routerLink]="'/trends'">Buy</button>
 <button class="btn btn-primary" style="margin-left: 8px;">Sell</button>
 <br><h2> Buy Stocks</h2>
 <div>
